test/compile_failure_files/module_dep_on_test_fixture_module.exs
defmodule ModuleDepOnTestFixture do
  use ExUnitFixtures.FixtureModule

  deffixture test_fixture do
  end

  deffixture module_fixture(test_fixture), scope: :module do
  end
end
